--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/platform-browser-dynamic": "^2.4.9",
     "@angular/router": "^3.4.9",
     "core-js": "^2.4.1",
+    "ng2-bootstrap": "^1.3.3",
     "reflect-metadata": "^0.1.10",
     "rxjs": "^5.0.1",
     "systemjs": "^0.20.9",
